fix for dark mode with dark style applied to the teaser

--- a/theme/demos/wireframe/site/variables.css
+++ b/theme/demos/wireframe/site/variables.css
@@ -32,4 +32,17 @@
     --color-shade-3: 63, 81, 90;
     --color-shade-4: 51, 66, 73;
   }
+
+  .dark .dark,
+  .dark .dark*::before,
+  .dark .dark*::after {
+    --color-background: 86, 113, 127;
+    --color-foreground: 250, 250, 250;
+    --color-link: 178, 210, 255;
+    --color-focus: 178, 210, 255;
+    --color-shade-1: 86, 113, 127;
+    --color-shade-2: 77, 101, 113;
+    --color-shade-3: 63, 81, 90;
+    --color-shade-4: 51, 66, 73;
+  }
 }
